--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  firebase_core: ^1.4.0
+  cloud_firestore: ^2.4.0
   flutter:
     sdk: flutter
-
+    
 
 
   # The following adds the Cupertino Icons font to your application.
